# skylens-Azure

./: Dockerfile  Makefile  README.md  go.mod  go.sum  nats-server.conf  skylens-node.service
cmd/flight-sim/: main.go
cmd/intel-updater/: main.go
cmd/skylens-node/: config.go  main.go
configs/: config.example.yaml
docker/: docker-compose.yml
docs/: README.md  TEST_DAY_CHECKLIST.md  whitepaper.md
internal/api/: auth_integration.go  server.go
internal/auth/: auth.go  handlers.go  jwt.go  middleware.go  models.go  password.go
internal/geo/: mgrs.go  (+1 more)
proto/: skylens.pb.go  skylens.proto
scripts/: install-node.sh  install-node.sh.bak.1  install-node.sh.bak.2.broken  install-node.sh.bak.3.idk  install-node.sh.bak.4  install.sh  install.sh.bak.1773182080  live-monitor.sh  preflight-check.sh  uninstall.sh  uninstall.sh..bak  uninstall.sh.bak.1
tap/: Cargo.toml  README.md  build.rs  config.toml  skylens-pcap.service
tap/deploy/tap-003/: config.toml  nats-proxy.py  skylens-nats-proxy.service  skylens-tap.service  tailscaled-skylens.service
tap/docs/: INSTALL.md  REALTEK_BEACON_FIX.md  TAP_OPERATIONS_BRIEF.md
tap/intel/: drone_models.json
tap/src/: config.rs  main.rs
tap/src/capture/: ble.rs  channel.rs  mod.rs  nl80211.rs  pcap.rs  sdr.rs  sdr_detect.rs
tap/src/decode/: baseline.rs  dji.rs  droneid.rs  frame.rs  mod.rs  oui.rs  remoteid.rs
tap/src/publish/: buffer.rs  mod.rs  nats.rs
test/: AUTH_E2E_TEST_PLAN.md  auth_e2e_runner.sh  auth_e2e_test.sh  config.test.yaml  detection_pipeline_test.go  detection_test_plan.md  inject_detection.go
(+79 files in other folders)
